Added additional content

--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
 
             <div class="contact_info_container fh">
-              <div class="contact-info__block"></div>
-
-              <div class="contact-info__block contact-info__block--center">
-                <img
-                  class="contact-info__avatar"
-                  src="assets/avatar.jpg"
-                  alt="Avatar"
-                />
-              </div>
-
               <div class="contact-info__block">
                 <a href="" rel="author" class="contact-info__item">
                   <div class="contact-info__item-icon-wrapper">
@@ -43,7 +33,17 @@
                   </div>
                   <span>Fastiv, Ukraine</span>
                 </a>
+              </div>
 
+              <div class="contact-info__block contact-info__block--center">
+                <img
+                  class="contact-info__avatar"
+                  src="assets/avatar.jpg"
+                  alt="Avatar"
+                />
+              </div>
+
+              <div class="contact-info__block">
                 <a
                   href="https://www.linkedin.com/in/serbyns/"
                   rel="author"
@@ -139,6 +139,109 @@
                 fullstack developer, improve my teamwork skills, and work on
                 real-world projects that make an impact.
               </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="skills">
+              <h3 class="skills__header">Skills</h3>
+              <p class="skills__text">
+                HTML, CSS, JavaScript, React, SASS, Python, C++, Arduino, STM32,
+                OpenCV, Git, GameDev, STEM Teaching, Problem Solving, Teamwork
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="main-info fh">
+              <div class="experiences">
+                <h3 class="experiences__header">Experience</h3>
+
+                <div class="experiences__company">
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability"
+                      >2019–Present</span
+                    >
+                    <h3 class="experiences__company-header-name">
+                      STEM & Robotics Educator (Freelance)
+                    </h3>
+                  </div>
+
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role"
+                      >Course Developer & Instructor</span
+                    >
+                    <h3 class="experiences__company-project-name">
+                      OpenCV & Arduino Curriculum
+                    </h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>
+                        Designed and taught project-based lessons for students
+                        aged 10–16
+                      </li>
+                      <li>
+                        Developed interactive courses using Arduino, STM32,
+                        OpenCV
+                      </li>
+                      <li>
+                        Created educational games with MakeCode Arcade & App
+                        Inventor
+                      </li>
+                      <li>
+                        Integrated hardware projects with Python and Processing
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="additional-info fv">
+                <div class="additional-info fv">
+                  <div class="additional-info__education">
+                    <h3 class="additional-info__education-header">Education</h3>
+
+                    <div class="additional-info__education-university">
+                      <span
+                        class="additional-info__education-university-durability"
+                        >2023</span
+                      >
+                      <h3
+                        class="additional-info__education-university-speciality"
+                      >
+                        MSc Applied Physics and Nanomaterials
+                      </h3>
+                      <p class="additional-info__education-university-name">
+                        Taras Shevchenko National University of Kyiv
+                      </p>
+                    </div>
+
+                    <div class="additional-info__education-university">
+                      <span
+                        class="additional-info__education-university-durability"
+                        >2021</span
+                      >
+                      <h3
+                        class="additional-info__education-university-speciality"
+                      >
+                        BSc Software Engineering
+                      </h3>
+                      <p class="additional-info__education-university-name">
+                        National Aviation University
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="additional-info__languages">
+                    <h3 class="additional-info__languages-header">Languages</h3>
+                    <p class="additional-info__languages-item">English</p>
+                    <p class="additional-info__languages-item">Ukrainian</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
